<?xml version="1.0" encoding="ISO-8859-1"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 <modelVersion>4.0.0</modelVersion>
 <groupId>niva.geoserver</groupId>
 <artifactId>niva-geoserver</artifactId>
 <version>8.1</version>
 <packaging>jar</packaging>
 <name>Niva GeoServer</name>
 <properties>
   <gt.version>23-NIVA</gt.version>
   <gs.version>2.17-NIVA</gs.version>
   <spring.version>5.1.16.RELEASE</spring.version>
   <spring.security.version>5.1.11.RELEASE</spring.security.version>
   <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 </properties>
 <dependencies>
   <dependency>
     <groupId>org.geoserver</groupId>
     <artifactId>gs-wms</artifactId>
     <version>${gs.version}</version>
    </dependency>
    <dependency>
      <groupId>org.geoserver</groupId>
      <artifactId>gs-rest</artifactId>
      <version>${gs.version}</version>
    </dependency>
    <dependency>
      <groupId>org.geotools</groupId>
      <artifactId>gt-jts-wrapper</artifactId>
      <version>${gt.version}</version>
    </dependency>
    <dependency>
  	  <groupId>org.geoserver.web</groupId>
  	  <artifactId>gs-web-sec-core</artifactId>
  	  <version>${gs.version}</version>
    </dependency>
    <dependency>
      <groupId>org.geoserver.extension</groupId>
      <artifactId>gs-printing</artifactId>
      <version>${gs.version}</version>
    </dependency>
    <dependency>
      <groupId>org.geoserver.extension</groupId>
      <artifactId>gs-wps-core</artifactId>
      <version>${gs.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
	  <artifactId>commons-math</artifactId>
	  <version>2.2</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-aop</artifactId>
      <version>${spring.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-expression</artifactId>
      <version>${spring.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-core</artifactId>
      <version>${spring.security.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.9.4</version>
    </dependency>
    <dependency>
	  <groupId>niva.geotools</groupId>
  	  <artifactId>niva-tools</artifactId>
  	  <version>6.0</version>
    </dependency>
    <dependency>
      <groupId>niva.geotools</groupId>
      <artifactId>aquamonitor-data</artifactId>
      <version>7.1</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>junit-addons</groupId>
      <artifactId>junit-addons</artifactId>
      <version>1.4</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.mockrunner</groupId>
      <artifactId>mockrunner</artifactId>
      <version>0.3.6</version>
  	  <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>xmlunit</groupId>
      <artifactId>xmlunit</artifactId>
      <version>1.6</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-test</artifactId>
      <version>${spring.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.geoserver</groupId>
      <artifactId>gs-main</artifactId>
      <version>${gs.version}</version>
      <scope>test</scope>
      <classifier>tests</classifier>
    </dependency>
    <dependency>
      <groupId>org.geoserver</groupId>
      <artifactId>gs-wms</artifactId>
      <version>${gs.version}</version>
      <scope>test</scope>
      <classifier>tests</classifier>
    </dependency>
    <dependency>
      <groupId>org.geoserver.extension</groupId>
      <artifactId>gs-wps-core</artifactId>
      <version>${gs.version}</version>
      <scope>test</scope>
      <classifier>tests</classifier>
    </dependency>
    <dependency>
      <groupId>org.geotools</groupId>
      <artifactId>gt-sample-data</artifactId>
      <version>${gt.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <version>3.0.1</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.3.2</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <repositories>
    <repository>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <id>osgeo</id>
      <name>Open Source Geospatial Foundation Repository</name>
      <url>https://repo.osgeo.org/repository/release/</url>
    </repository>
  </repositories>
</project>
